--- a/portal/static/css/main.css
+++ b/portal/static/css/main.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap");
 /*!
  * Bootstrap v5.0.2 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -25,7 +24,7 @@
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
-  --bs-light: #efe0cf;
+  --bs-light: #f1f1f1;
   --bs-dark: #212529;
   --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
@@ -42,7 +41,7 @@
 
 body {
   margin: 0;
-  font-family: "Titillium Web", sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -1423,15 +1422,15 @@ progress {
   border-color: #dfc2c4; }
 
 .table-light {
-  --bs-table-bg: #efe0cf;
-  --bs-table-striped-bg: #e3d4c5;
+  --bs-table-bg: #f1f1f1;
+  --bs-table-striped-bg: #e5e5e5;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #d7c9ba;
+  --bs-table-active-bg: #d9d9d9;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #ddcfbf;
+  --bs-table-hover-bg: #dfdfdf;
   --bs-table-hover-color: #000;
   color: #000;
-  border-color: #d7c9ba; }
+  border-color: #d9d9d9; }
 
 .table-dark {
   --bs-table-bg: #212529;
@@ -2251,27 +2250,27 @@ textarea.form-control-lg {
 
 .btn-light {
   color: #000;
-  background-color: #efe0cf;
-  border-color: #efe0cf; }
+  background-color: #f1f1f1;
+  border-color: #f1f1f1; }
   .btn-light:hover {
     color: #000;
-    background-color: #f2e4d6;
-    border-color: #f1e3d4; }
+    background-color: #f3f3f3;
+    border-color: #f2f2f2; }
   .btn-check:focus + .btn-light, .btn-light:focus {
     color: #000;
-    background-color: #f2e4d6;
-    border-color: #f1e3d4;
-    box-shadow: 0 0 0 0.25rem rgba(203, 190, 176, 0.5); }
+    background-color: #f3f3f3;
+    border-color: #f2f2f2;
+    box-shadow: 0 0 0 0.25rem rgba(205, 205, 205, 0.5); }
   .btn-check:checked + .btn-light, .btn-check:active + .btn-light, .btn-light:active, .btn-light.active, .show > .btn-light.dropdown-toggle {
     color: #000;
-    background-color: #f2e6d8;
-    border-color: #f1e3d4; }
+    background-color: #f4f4f4;
+    border-color: #f2f2f2; }
     .btn-check:checked + .btn-light:focus, .btn-check:active + .btn-light:focus, .btn-light:active:focus, .btn-light.active:focus, .show > .btn-light.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0.25rem rgba(203, 190, 176, 0.5); }
+      box-shadow: 0 0 0 0.25rem rgba(205, 205, 205, 0.5); }
   .btn-light:disabled, .btn-light.disabled {
     color: #000;
-    background-color: #efe0cf;
-    border-color: #efe0cf; }
+    background-color: #f1f1f1;
+    border-color: #f1f1f1; }
 
 .btn-dark {
   color: #fff;
@@ -2412,22 +2411,22 @@ textarea.form-control-lg {
     background-color: transparent; }
 
 .btn-outline-light {
-  color: #efe0cf;
-  border-color: #efe0cf; }
+  color: #f1f1f1;
+  border-color: #f1f1f1; }
   .btn-outline-light:hover {
     color: #000;
-    background-color: #efe0cf;
-    border-color: #efe0cf; }
+    background-color: #f1f1f1;
+    border-color: #f1f1f1; }
   .btn-check:focus + .btn-outline-light, .btn-outline-light:focus {
-    box-shadow: 0 0 0 0.25rem rgba(239, 224, 207, 0.5); }
+    box-shadow: 0 0 0 0.25rem rgba(241, 241, 241, 0.5); }
   .btn-check:checked + .btn-outline-light, .btn-check:active + .btn-outline-light, .btn-outline-light:active, .btn-outline-light.active, .btn-outline-light.dropdown-toggle.show {
     color: #000;
-    background-color: #efe0cf;
-    border-color: #efe0cf; }
+    background-color: #f1f1f1;
+    border-color: #f1f1f1; }
     .btn-check:checked + .btn-outline-light:focus, .btn-check:active + .btn-outline-light:focus, .btn-outline-light:active:focus, .btn-outline-light.active:focus, .btn-outline-light.dropdown-toggle.show:focus {
-      box-shadow: 0 0 0 0.25rem rgba(239, 224, 207, 0.5); }
+      box-shadow: 0 0 0 0.25rem rgba(241, 241, 241, 0.5); }
   .btn-outline-light:disabled, .btn-outline-light.disabled {
-    color: #efe0cf;
+    color: #f1f1f1;
     background-color: transparent; }
 
 .btn-outline-dark {
@@ -3545,11 +3544,11 @@ textarea.form-control-lg {
     color: #6a1a21; }
 
 .alert-light {
-  color: #605953;
-  background-color: #fcf9f5;
-  border-color: #faf6f1; }
+  color: #606060;
+  background-color: #fcfcfc;
+  border-color: #fbfbfb; }
   .alert-light .alert-link {
-    color: #4d4742; }
+    color: #4d4d4d; }
 
 .alert-dark {
   color: #141619;
@@ -3829,15 +3828,15 @@ textarea.form-control-lg {
     border-color: #842029; }
 
 .list-group-item-light {
-  color: #605953;
-  background-color: #fcf9f5; }
+  color: #606060;
+  background-color: #fcfcfc; }
   .list-group-item-light.list-group-item-action:hover, .list-group-item-light.list-group-item-action:focus {
-    color: #605953;
-    background-color: #e3e0dd; }
+    color: #606060;
+    background-color: #e3e3e3; }
   .list-group-item-light.list-group-item-action.active {
     color: #fff;
-    background-color: #605953;
-    border-color: #605953; }
+    background-color: #606060;
+    border-color: #606060; }
 
 .list-group-item-dark {
   color: #141619;
@@ -4143,7 +4142,7 @@ textarea.form-control-lg {
   z-index: 1080;
   display: block;
   margin: 0;
-  font-family: "Titillium Web", sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -4228,7 +4227,7 @@ textarea.form-control-lg {
   z-index: 1070;
   display: block;
   max-width: 276px;
-  font-family: "Titillium Web", sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -4658,9 +4657,9 @@ textarea.form-control-lg {
     color: #b02a37; }
 
 .link-light {
-  color: #efe0cf; }
+  color: #f1f1f1; }
   .link-light:hover, .link-light:focus {
-    color: #f2e6d8; }
+    color: #f4f4f4; }
 
 .link-dark {
   color: #212529; }
@@ -4958,7 +4957,7 @@ textarea.form-control-lg {
   border-color: #dc3545 !important; }
 
 .border-light {
-  border-color: #efe0cf !important; }
+  border-color: #f1f1f1 !important; }
 
 .border-dark {
   border-color: #212529 !important; }
@@ -5587,7 +5586,7 @@ textarea.form-control-lg {
   color: #dc3545 !important; }
 
 .text-light {
-  color: #efe0cf !important; }
+  color: #f1f1f1 !important; }
 
 .text-dark {
   color: #212529 !important; }
@@ -5629,7 +5628,7 @@ textarea.form-control-lg {
   background-color: #dc3545 !important; }
 
 .bg-light {
-  background-color: #efe0cf !important; }
+  background-color: #f1f1f1 !important; }
 
 .bg-dark {
   background-color: #212529 !important; }
@@ -7451,11 +7450,8 @@ div.col-12:not(:last-child) {
   margin-bottom: 1rem; }
 
 footer {
-  box-shadow: 0 -1px 2px #b3b3b3;
   margin-top: 2rem;
-  background-color: #efe0cf;
   display: flex;
-  height: 4rem;
   justify-content: center; }
   footer .row {
     align-content: center; }
