--- a/portal/website/templates/application.html
+++ b/portal/website/templates/application.html
@@ -31,73 +31,37 @@
                         <input id="full-name" name="full-name" type="text" class="form-control" placeholder="First Last" required>
                     </div>
                     <div class="pt-3">
-                        <label for="email" class="form-label">Email</label>
+                        <label for="institutional-affiliation" class="form-label">Institutional Affiliation</label>
+                        <input id="institutional-affiliation" name="institutional-affiliation" class="form-control" required>
+                    </div>
+                    <div class="pt-3">
+                        <label for="email" class="form-label">Email (Please use the email address related to your institutional affiliation)</label>
                         <input id="email" name="email" type="email" class="form-control" placeholder="username@domain.ext" required>
                     </div>
                     <div class="pt-3">
-                        <label for="how-did-you-hear-about-us" class="form-label">How did you hear about us?</label>
-                        <textarea id="how-did-you-hear-about-us" name="how-did-you-hear-about-us" class="form-control" rows="4" required></textarea>
-                    </div>
-                    <div class="pt-3">
-                        <label for="research-description" class="form-label">Briefly describe your research</label>
+                        <label for="research-description" class="form-label">Briefly describe your researchor research-related role</label>
                         <textarea id="research-description" name="research-description" class="form-control" rows="4" required></textarea>
                     </div>
-                    <div class="pt-3">
-                        <label for="why-scale-up" class="form-label">Why are you looking to scale up your compute capacity?</label>
-                        <textarea id="why-scale-up" name="why-scale-up" class="form-control" rows="4" required></textarea>
-                    </div>
                     <h3 class="mt-4">About your Computing Workloads</h3>
+                    <div class="pt-3">
+                        <label for="typical-computation" class="form-label">
+                            What is a typical computation for your work?
+                        </label>
+                        <textarea id="typical-computation" name="typical-computation" class="form-control" rows="4" required></textarea>
+                    </div>
                     <div>
-                        <label for="names-and-languages" class="form-label">Program name(s) and coding language(s)</label>
+                        <label for="resource-needs" class="form-label">What are resource needs for a typical computation? Let us know about data sizes, computation runtime, and/or CPU/GPU/memory needs.</label>
+                        <textarea id="resource-needs" name="resource-needs" class="form-control" rows="4" required></textarea>
+                    </div>
+                    <div class="pt-3">
+                        <label for="computation-amount" class="form-label">
+                            How many computations would you like to run?
+                        </label>
+                        <textarea id="computation-amount" name="computation-amount" class="form-control" rows="4" required></textarea>
+                    </div>
+                    <div>
+                        <label for="names-and-languages" class="form-label">What program(s) or coding language(s) do you use?</label>
                         <textarea id="names-and-languages" name="names-and-languages" class="form-control" rows="4" required></textarea>
-                    </div>
-                    <div class="pt-3">
-                        <label for="special-dependencies-or-circumstances" class="form-label">
-                            Are there any special dependencies or compiling considerations you've had to deal with?
-                        </label>
-                        <textarea id="special-dependencies-or-circumstances" name="special-dependencies-or-circumstances" class="form-control" rows="4" required></textarea>
-                    </div>
-                    <div class="pt-3">
-                        <label for="prior-computing-environment" class="form-label">
-                            Tell us where you've run similar computing work before: desktop, shared cluster, etc.? Linux, Windows, Mac?
-                        </label>
-                        <textarea id="prior-computing-environment" name="prior-computing-environment" class="form-control" rows="4" required></textarea>
-                    </div>
-                    <div class="pt-3">
-                        <label for="gpu-usage" class="form-label">
-                            Do you have interest in using GPUs, and/or have you used GPUs for similar work in the past?
-                        </label>
-                        <textarea id="gpu-usage" name="gpu-usage" class="form-control" rows="4" required></textarea>
-                    </div>
-                    <div class="pt-3">
-                        <label for="communicating-processes" class="form-label">
-                            Do you typically run your program(s) with multiple processors working/communicating with one another? If so, how have you accomplished that? (OpenMP/MPI, etc?)
-                        </label>
-                        <textarea id="communicating-processes" name="communicating-processes" class="form-control" rows="4" required></textarea>
-                    </div>
-                    <div class="pt-3">
-                        <label for="decomposition-of-workload"  class="form-label">
-                            Could your computing work be broken up into many separate, but complete 'pieces' that don't rely on one another? If so, how many pieces can this computing work be broken into?
-                        </label>
-                        <textarea id="decomposition-of-workload" name="decomposition-of-workload" class="form-control" rows="4" required></textarea>
-                    </div>
-                    <div class="pt-3">
-                        <label for="input-output-size" class="form-label">
-                            Typical input and output size for each 'piece' (can be a range)
-                        </label>
-                        <textarea id="input-output-size" name="input-output-size" class="form-control" rows="4" required></textarea>
-                    </div>
-                    <div class="pt-3">
-                        <label for="resource-amount" class="form-label">
-                            Typical RAM and number of CPU cores (or GPU model) you've used for each 'piece'?
-                        </label>
-                        <textarea id="resource-amount" name="resource-amount" class="form-control" rows="4" required></textarea>
-                    </div>
-                    <div class="pt-3">
-                        <label for="runtime" class="form-label">
-                            How long does one piece run in your typical setup?
-                        </label>
-                        <textarea id="runtime" name="runtime" class="form-control" rows="4" required></textarea>
                     </div>
                     <div class="pt-3">
                         <label for="additional-info" class="form-label">
