Update homepage based on input

--- a/portal/templates/base.html
+++ b/portal/templates/base.html
@@ -32,8 +32,7 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-xxl">
                     <a class="navbar-brand" href="/">
-                        <img height="60" width="240" src="/static/index/images/OSG-Portal-Logo.png" alt="OSG Portal Logo"
-                             class="d-inline-block align-text-top">
+                        <img height="60" width="240" src="/static/index/images/OSG-Portal-Logo.png" alt="OSG Portal Logo">
                     </a>
 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -72,9 +71,9 @@
                                     <div class="col-6 col-lg-4 col-xl-3 my-2">
                                         <table>
                                             <tbody><tr><th>Services</th></tr>
-                                            <tr><td><a href="https://osg-htc.org//services/access-point">OSG-Operated Access Points</a></td></tr>
-                                            <tr><td><a href="https://osg-htc.org//services/open_science_pool">Open Science Pool</a></td></tr>
-                                            <tr><td><a href="https://osg-htc.org//services/osdf">Open Science Data Federation</a></td></tr>
+                                            <tr><td><a href="https://osg-htc.org/services/access-point">OSG-Operated Access Points</a></td></tr>
+                                            <tr><td><a href="https://osg-htc.org/services/open_science_pool">Open Science Pool</a></td></tr>
+                                            <tr><td><a href="https://osg-htc.org/services/osdf">Open Science Data Federation</a></td></tr>
                                         </tbody></table>
                                     </div>
 
@@ -90,19 +89,19 @@
                                     <div class="col-6 col-lg-4 col-xl-3 my-2">
                                         <table>
                                             <tbody><tr><th>Engagement</th></tr>
-                                            <tr><td><a href="https://osg-htc.org//spotlight.html">OSG User Spotlights</a></td></tr>
-                                            <tr><td><a href="https://osg-htc.org//news.html">News</a></td></tr>
-                                            <tr><td><a href="https://osg-htc.org//events.html">Events</a></td></tr>
+                                            <tr><td><a href="https://osg-htc.org/spotlight.html">OSG User Spotlights</a></td></tr>
+                                            <tr><td><a href="https://osg-htc.org/news.html">News</a></td></tr>
+                                            <tr><td><a href="https://osg-htc.org/events.html">Events</a></td></tr>
                                         </tbody></table>
                                     </div>
 
                                     <div class="col-6 col-lg-4 col-xl-3 my-2">
                                         <table>
                                             <tbody><tr><th>About OSG</th></tr>
-                                            <tr><td><a href="https://osg-htc.org//about/introduction">Introduction</a></td></tr>
-                                            <tr><td><a href="https://osg-htc.org//about/publications">Publications</a></td></tr>
-                                            <tr><td><a href="https://osg-htc.org//code-of-conduct">Code of Conduct</a></td></tr>
-                                            <tr><td><a href="https://osg-htc.org//acknowledging">Acknowledging OSG</a></td></tr>
+                                            <tr><td><a href="https://osg-htc.org/about/introduction">Introduction</a></td></tr>
+                                            <tr><td><a href="https://osg-htc.org/about/publications">Publications</a></td></tr>
+                                            <tr><td><a href="https://osg-htc.org/code-of-conduct">Code of Conduct</a></td></tr>
+                                            <tr><td><a href="https://osg-htc.org/acknowledging">Acknowledging OSG</a></td></tr>
                                         </tbody></table>
                                     </div>
 
