--- a/portal/website/templates/application.html
+++ b/portal/website/templates/application.html
@@ -39,7 +39,7 @@
                         <input id="email" name="email" type="email" class="form-control" placeholder="username@domain.ext" required>
                     </div>
                     <div class="pt-3">
-                        <label for="research-description" class="form-label">Briefly describe your researchor research-related role</label>
+                        <label for="research-description" class="form-label">Briefly describe your research or research-related role</label>
                         <textarea id="research-description" name="research-description" class="form-control" rows="4" required></textarea>
                     </div>
                     <h3 class="mt-4">About your Computing Workloads</h3>
@@ -50,7 +50,7 @@
                         <textarea id="typical-computation" name="typical-computation" class="form-control" rows="4" required></textarea>
                     </div>
                     <div>
-                        <label for="resource-needs" class="form-label">What are resource needs for a typical computation? Let us know about data sizes, computation runtime, and/or CPU/GPU/memory needs.</label>
+                        <label for="resource-needs" class="form-label">What are your resource needs for a typical computation? Let us know about data sizes, computation runtime, and/or CPU/GPU/memory needs.</label>
                         <textarea id="resource-needs" name="resource-needs" class="form-control" rows="4" required></textarea>
                     </div>
                     <div class="pt-3">
