--- a/portal/website/templates/index.html
+++ b/portal/website/templates/index.html
@@ -12,12 +12,12 @@
             width: 100%;
             height: 400px;
             z-index: -1;
-            background: url('/static/images/Map_1_Projects.png') no-repeat center bottom;
-            -webkit-filter: blur(5px);
-            -moz-filter: blur(5px);
-            -o-filter: blur(5px);
-            -ms-filter: blur(5px);
-            filter: blur(5px) brightness(40%);
+            background: url('/static/images/ospool-project-institutions.jpg') no-repeat center bottom;
+            -webkit-filter: blur(8px);
+            -moz-filter: blur(8px);
+            -o-filter: blur(8px);
+            -ms-filter: blur(8px);
+            filter: blur(2px) brightness(30%);
             background-color: black;
         }
 
@@ -25,6 +25,10 @@
             display: flex;
             height: 400px;
             font-family: Poppins, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
+        }
+
+        .cursor-pointer {
+            cursor: pointer;
         }
     </style>
 {% endblock %}
@@ -37,7 +41,7 @@
             <div class="container text-white my-auto">
                 <div class="row justify-content-center py-3">
                     <div class="col-12 col-xl-9 col-lg-10 col-md-12 col-12 col-sm-11 pt-1 pt-md-0 d-flex">
-                        <h2 class="text-center d-inline-block mx-auto">
+                        <h2 class="text-center d-inline-block mx-auto mb-0">
                             <span class="fs-1 d-inline-block">On the <b class="text-primary">OSPool</b> on <span id="ospool-date"></span></span><br>
                             <span class="d-inline-block job-text py-2">
                                 <b class="d-inline-block text-primary">
@@ -70,51 +74,41 @@
                 <h1 class="pt-5 fw-bold">Gateway to Capacity</h1>
                 <p>
                     The OSG Portal is a researcher's gateway to harnessing all of the compute capacity that is
-                    available to them. With an OSG account you have access to OSG Services including: OSPool,
-                    OSG-Operated Access Points, and the Open Science Data Federation. Together these services
-                    provided researchers with a way to manage running jobs, resources to run these jobs on, and
-                    a data caching infrastructure to keep latency low.
+                    available to them. With an OSG account you have access to OSG services including the OSPool,
+                    OSG operated Access Points, and the Open Science Data Federation. Together these services
+                    provide researchers with a way to manage jobs, resources to run these jobs, and a data caching
+                    infrastructure to keep latency low.
                 </p>
                 <div class="row my-4 justify-content-center">
                     <div class="col-4">
-                        <a class="text-decoration-none" href="https://osg-htc.org/services/ospool.html">
-                            <div class="p-3 border border-dark border-5 rounded-3 shadow-lg">
-                                <img class="img-fluid" src="/static/images/OSG-Colored-Icons_ospool.png"/>
-                                <h4 class="text-center text-dark mb-0 mt-3">OSPool</h4>
-                                <div class="text-center"><a href="https://osg-htc.org/services/ospool.html">Learn More</a></div>
-                            </div>
-                        </a>
+                        <div class=" p-3 border border-dark border-5 rounded-3 shadow-lg">
+                            <img class="img-fluid " src="/static/images/OSG-Colored-Icons_ospool.png"/>
+                            <h4 class="text-center  text-dark mb-0 mt-3">OSPool</h4>
+                            <div class="text-center "><a href="https://osg-htc.org/services/open_science_pool.html">Learn More</a></div>
+                        </div>
                     </div>
                     <div class="col-4">
-                        <a class="text-decoration-none" href="https://osg-htc.org/services/access-point.html">
-                            <div class="p-3 border border-dark border-5 rounded-3 shadow-lg">
-                                <img class="img-fluid" src="/static/images/OSG-Colored-Icons_access-point.png"/>
-                                <h4 class="text-center text-dark mb-0 mt-3">Access Point</h4>
-                                <div class="text-center"><a href="https://osg-htc.org/services/access-point.html">Learn More</a></div>
-                            </div>
-                        </a>
+                        <div class=" p-3 border border-dark border-5 rounded-3 shadow-lg">
+                            <img class="img-fluid " src="/static/images/OSG-Colored-Icons_access-point.png"/>
+                            <h4 class="text-center  text-dark mb-0 mt-3">Access Point</h4>
+                            <div class="text-center"><a href="https://osg-htc.org/services/access-point.html">Learn More</a></div>
+                        </div>
                     </div>
                     <div class="col-4">
-                        <a class="text-decoration-none" href="https://osg-htc.org/services/osdf.html">
-                            <div class="p-4 border border-dark border-5 rounded-3 shadow-lg">
-                                <img class="img-fluid" src="/static/images/OSG-Colored-Icons_osdf.png"/>
-                                <h4 class="text-center text-dark mb-0 mt-3">OSDF</h4>
-                                <div class="text-center"><a href="https://osg-htc.org/services/osdf.html">Learn More</a></div>
-                            </div>
-                        </a>
+                        <div class=" p-4 border border-dark border-5 rounded-3 shadow-lg">
+                            <img class="img-fluid " src="/static/images/OSG-Colored-Icons_osdf.png"/>
+                            <h4 class="text-center  text-dark mb-0 mt-3">OSDF</h4>
+                            <div class="text-center "><a href="https://osg-htc.org/services/osdf.html">Learn More</a></div>
+                        </div>
                     </div>
+                </div>
+                <div class="d-flex p-3 border border-dark border-5 rounded-3 shadow-lg">
+                    <a class="btn btn-primary m-auto">Apply Now</a>
                 </div>
             </div>
             <div class="d-none d-lg-block col-lg-3">
                 <h1 class="pt-5 ">&nbsp</h1>
-                <a class="twitter-timeline" data-height="400" href="https://twitter.com/osg_htc?ref_src=twsrc%5Etfw">Tweets by osg_htc</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-12 col-xl-7 col-lg-8 col-md-10">
-                <p>
-
-                </p>
+                <a class="twitter-timeline" data-height="550" href="https://twitter.com/osg_htc?ref_src=twsrc%5Etfw">Tweets by osg_htc</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </div>
     </div>
