--- a/portal/templates/404.html
+++ b/portal/templates/404.html
@@ -12,9 +12,7 @@
             <div class="col-12 d-flex"><span class=" mx-auto text-center" style="font-size:400px;">404</span></div>
             <div class="col-12 text-center">
                 <p>
-                    You have found a page that does not exist, please direct yourself to our
-                    <a href="/documentation/">Documentation</a> which is currently our only offering
-                    on this portal.
+                    You have found a page that does not exist.
                 </p>
             </div>
         </div>
