--- a/portal/website/templates/index.html
+++ b/portal/website/templates/index.html
@@ -103,7 +103,7 @@
                     </div>
                 </div>
                 <div class="d-flex p-3 border border-dark border-5 rounded-3 shadow-lg">
-                    <a class="btn btn-primary m-auto">Apply Now</a>
+                    <a class="btn btn-primary m-auto" href="/application">Apply Now</a>
                 </div>
             </div>
             <div class="d-none d-lg-block col-lg-3">
