--- a/portal/website/templates/index.html
+++ b/portal/website/templates/index.html
@@ -73,9 +73,14 @@
             <div class="col-12 col-xl-7 col-lg-8 col-md-10">
                 <h1 class="pt-5 fw-bold">Gateway to Capacity</h1>
                 <p>
-                    The OSG Portal is a researcher's gateway to harnessing all of the compute capacity that is
-                    available to them. With an OSG account you have access to OSG services including the OSPool,
-                    OSG operated Access Points, and the Open Science Data Federation. Together these services
+                    <b>
+                        The OSG Portal is a researcher's gateway to harnessing OSPool capacity without a proposal or an
+                        allocation.
+                    </b>
+                </p>
+                <p>
+                    Beyond the OSPool's Capacity, an applying now provides access to OSG services including
+                    OSG-Operated Access Points, and the Open Science Data Federation. Together these services
                     provide researchers with a way to manage jobs, resources to run these jobs, and a data caching
                     infrastructure to keep latency low.
                 </p>
