Update text based on Miron's insights

--- a/portal/website/templates/application.html
+++ b/portal/website/templates/application.html
@@ -10,25 +10,16 @@
     <div class="container-xxl py-4">
         <div class="row justify-content-center">
             <div class="col-12 col-xl-7 col-lg-8 col-md-10">
-                <h1>Schedule A Consultation</h1>
+                <h1>Sign-up for Capacity</h1>
                 <p>
-                    <b>OSPool capacity is available to you without a proposal, and without a previous allocation.</b>
-                    <img
-                            class="mb-2 popper"
-                            src="/static/images/info-circle.svg"
-                            alt="Exclamation Circle"
-                            data-bs-toggle="popover"
-                            data-bs-trigger="hover focus"
-                            data-bs-placement="bottom"
-                            data-bs-html="true"
-                            title="<div>Full use policy can be found in <a href='https://portal.osg-htc.org/documentation/overview/references/policy/'>documentation</a>.</div>"
-                    />
+                    No proposals! No allocations! If you are a researcher affiliated with a US Academic Institution,
+                    the capacity of the OSPool is available for you to harness.
                 </p>
                 <p>
-                    On filling out the form below you will be emailed with a ticket # and link so that
-                    we can follow up with you and a schedule consultation. We are excited to meet with you and look forward to helping you scale up your research!
+                    <b>
+                        All you have to do is the sign-up here!
+                    </b>
                 </p>
-                <h2>Request Form</h2>
                 <form id="consultation-form" name="consultation-form" method="post" action="">
                     <div>
                         <label for="full-name" class="form-label">Full Name</label>
